--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@lexical/react": "^0.2.1",
     "@netlify/functions": "^0.10.0",
+    "@nextui-org/react": "^1.0.8-beta.5",
     "@remix-run/netlify": "^1.4.0",
     "@remix-run/node": "^1.4.0",
     "@remix-run/react": "^1.4.0",
